--- a/Lab01.ipynb
+++ b/Lab01.ipynb
@@ -1,27 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Lab 01 : program to print your name and push the file to github"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R_Lalrinmawii\n"
+      "R Lalrinmawii\n"
      ]
     }
    ],
    "source": [
-    "print (\"R_Lalrinmawii\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Lab 01 : program to print your name and push the file to github"
+    "print (\"R Lalrinmawii\")"
    ]
   },
   {
