--- a/Lab02.ipynb
+++ b/Lab02.ipynb
@@ -30,6 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# create an empty list\n",
     "Namelist =[]"
    ]
   },
@@ -39,6 +40,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#the names with be enteed all in uppercase\n",
     "def listNames():\n",
     "    name = (input(\"enter new name\"))\n",
     "    name = name.upper()\n",
@@ -68,6 +70,7 @@
     }
    ],
    "source": [
+    "#the list will be sorted in alphabetical order\n",
     "listNames()\n",
     "print(Namelist)\n",
     "Namelist.sort()\n",
