--- a/Lab03.ipynb
+++ b/Lab03.ipynb
@@ -96,10 +96,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import statistics\n",
+    "\n",
+    "def check(data):\n",
+    "\n",
+    "    mean1 = statistics.mean(data)\n",
+    "    max1 = max(data)\n",
+    "    min1 = min(data)\n",
+    "    range1 = max1-min1\n",
+    "\n",
+    "    #check mean\n",
+    "    if mean1==Mean_list(data):\n",
+    "        print(\"mean is correct\")\n",
+    "    else:\n",
+    "        print(\"mean is wrong\")\n",
+    "    #check minimum\n",
+    "    if min1==minimum_list(data):\n",
+    "        print(\"minimum is correct\")\n",
+    "    else:\n",
+    "        print(\"minimum is wrong\")\n",
+    "    #check maximum\n",
+    "    if max1==maximum_list(data):\n",
+    "        print(\"maximum is correct\")\n",
+    "    else:\n",
+    "        print(\"maximum is wrong\")\n",
+    "    #check range\n",
+    "    if range1==range_list(data):\n",
+    "        print(\"range is correct\")\n",
+    "    else:\n",
+    "        print(\"range is wrong\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mean is correct\n",
+      "minimum is correct\n",
+      "maximum is correct\n",
+      "range is correct\n"
+     ]
+    }
+   ],
+   "source": [
+    "check(data)\n"
+   ]
   }
  ],
  "metadata": {
