--- a/Lab04.ipynb
+++ b/Lab04.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -30,8 +30,8 @@
      "text": [
       "New file created and data added successfully\n",
       "Dish Name      Total Orders   Total Income   \n",
-      "dish1          3              90             \n",
-      "dish2          0              0              \n",
+      "dish1          0              0              \n",
+      "dish2          1              40             \n",
       "dish3          0              0              \n",
       "dish4          0              0              \n",
       "dish5          0              0              \n",
@@ -40,6 +40,7 @@
     }
    ],
    "source": [
+    "# define a function\n",
     "def fileOpen():\n",
     "    file = open(\"order_details.txt\", \"w+\")\n",
     "    file.write(\"Dish Name;Number of Order;Price per item;Total Bill Amount\")\n",
@@ -50,12 +51,14 @@
     "    file.close()\n",
     "    return True\n",
     "\n",
+    "# get user inputs\n",
     "filetype = input(\"Want a new file to write data: y/n\")\n",
     "dish = input(\"Enter the dish:\")\n",
     "orders = int(input(\"Enter the order quantity:\"))\n",
     "items = [\"dish1\", \"dish2\", \"dish3\", \"dish4\", \"dish5\", \"dish6\"]\n",
     "prices = [30, 40, 50, 60, 45, 80]\n",
     "\n",
+    "# if-else statements\n",
     "if dish in items:\n",
     "    priceout = prices[items.index(dish)]\n",
     "    total = orders * priceout\n",
@@ -95,6 +98,13 @@
     "else:\n",
     "    print(\"Invalid input for display.\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
