--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -15,13 +15,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Input: Apple\n",
       "Total vowels: 2\n",
       "Vowel counts:\n",
       "a: 1\n",
@@ -59,19 +60,13 @@
     "\n",
     "\n",
     "#print necessary results\n",
+    "print(\"Input:\", user_input)\n",
     "print(\"Total vowels:\", total_vowels)\n",
     "print(\"Vowel counts:\")\n",
     "for vowel, count in vowelsDict.items():\n",
     "    print(f\"{vowel}: {count}\")\n",
     "print(f\"Percentage of vowels: {vowelsPercent:.2f}%\") #percent will be in two decimal numbers\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
