--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -15,22 +15,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: Apple\n",
-      "Total vowels: 2\n",
+      "Input: ENQUIRED\n",
+      "Total vowels: 4\n",
       "Vowel counts:\n",
-      "a: 1\n",
-      "e: 1\n",
-      "i: 0\n",
+      "a: 0\n",
+      "e: 2\n",
+      "i: 1\n",
       "o: 0\n",
-      "u: 0\n",
-      "Percentage of vowels: 40.00%\n"
+      "u: 1\n",
+      "Percentage of vowels: 50.00%\n"
      ]
     }
    ],
