--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -15,22 +15,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input: ENQUIRED\n",
+      "Input 1: StrawBerries\n",
       "Total vowels: 4\n",
       "Vowel counts:\n",
-      "a: 0\n",
+      "a: 1\n",
       "e: 2\n",
       "i: 1\n",
       "o: 0\n",
-      "u: 1\n",
-      "Percentage of vowels: 50.00%\n"
+      "u: 0\n",
+      "Percentage of vowels: 33.33%\n",
+      "Input 2: HELLOkitty\n",
+      "Total vowels: 3\n",
+      "Vowel counts:\n",
+      "a: 0\n",
+      "e: 1\n",
+      "i: 1\n",
+      "o: 1\n",
+      "u: 0\n",
+      "Percentage of vowels: 30.00%\n",
+      "Input 3: PeppaPig\n",
+      "Total vowels: 3\n",
+      "Vowel counts:\n",
+      "a: 1\n",
+      "e: 1\n",
+      "i: 1\n",
+      "o: 0\n",
+      "u: 0\n",
+      "Percentage of vowels: 37.50%\n"
      ]
     }
    ],
@@ -49,24 +67,32 @@
     "\n",
     "    return vowelCount, vowelsDict\n",
     "\n",
-    "#get input from user\n",
-    "user_input = input(\"Enter a string: \")\n",
     "\n",
-    "total_vowels, vowelsDict = countingVowels(user_input)\n",
+    "for i in range(3):\n",
+    "    # Get input from the user for each test case (at least three)\n",
+    "    user_input = input(f\"Enter string {i + 1}: \")\n",
     "\n",
-    "#calculating the percentage\n",
-    "totalChar = len(user_input)\n",
-    "vowelsPercent = (total_vowels / totalChar) * 100\n",
+    "    total_vowels, vowelsDict = countingVowels(user_input)\n",
     "\n",
+    "    # Calculate the percentage\n",
+    "    totalChar = len(user_input)\n",
+    "    vowelsPercent = (total_vowels / totalChar) * 100\n",
     "\n",
-    "#print necessary results\n",
-    "print(\"Input:\", user_input)\n",
-    "print(\"Total vowels:\", total_vowels)\n",
-    "print(\"Vowel counts:\")\n",
-    "for vowel, count in vowelsDict.items():\n",
-    "    print(f\"{vowel}: {count}\")\n",
-    "print(f\"Percentage of vowels: {vowelsPercent:.2f}%\") #percent will be in two decimal numbers\n"
+    "    # Print necessary results\n",
+    "    print(f\"Input {i + 1}: {user_input}\")\n",
+    "    print(\"Total vowels:\", total_vowels)\n",
+    "    print(\"Vowel counts:\")\n",
+    "    for vowel, count in vowelsDict.items():\n",
+    "        print(f\"{vowel}: {count}\")\n",
+    "    print(f\"Percentage of vowels: {vowelsPercent:.2f}%\")  # Percent will be in two decimal numbers\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
