--- a/Lab06.ipynb
+++ b/Lab06.ipynb
@@ -15,40 +15,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input 1: StrawBerries\n",
-      "Total vowels: 4\n",
+      "Input 1: PeppaPig\n",
+      "Total vowels: 3\n",
       "Vowel counts:\n",
       "a: 1\n",
-      "e: 2\n",
+      "e: 1\n",
       "i: 1\n",
       "o: 0\n",
       "u: 0\n",
-      "Percentage of vowels: 33.33%\n",
-      "Input 2: HELLOkitty\n",
-      "Total vowels: 3\n",
+      "Percentage of vowels: 37.50%\n",
+      "Input 2: MIFFYbunny\n",
+      "Total vowels: 2\n",
       "Vowel counts:\n",
       "a: 0\n",
-      "e: 1\n",
-      "i: 1\n",
-      "o: 1\n",
-      "u: 0\n",
-      "Percentage of vowels: 30.00%\n",
-      "Input 3: PeppaPig\n",
-      "Total vowels: 3\n",
-      "Vowel counts:\n",
-      "a: 1\n",
-      "e: 1\n",
+      "e: 0\n",
       "i: 1\n",
       "o: 0\n",
+      "u: 1\n",
+      "Percentage of vowels: 20.00%\n",
+      "Input 3: StrawbeeryShortcake\n",
+      "Total vowels: 6\n",
+      "Vowel counts:\n",
+      "a: 2\n",
+      "e: 3\n",
+      "i: 0\n",
+      "o: 1\n",
       "u: 0\n",
-      "Percentage of vowels: 37.50%\n"
+      "Percentage of vowels: 31.58%\n"
      ]
     }
    ],
@@ -68,7 +68,7 @@
     "    return vowelCount, vowelsDict\n",
     "\n",
     "\n",
-    "for i in range(3):\n",
+    "for i in range(3): #loop three times\n",
     "    # Get input from the user for each test case (at least three)\n",
     "    user_input = input(f\"Enter string {i + 1}: \")\n",
     "\n",
