--- a/lab07.ipynb
+++ b/lab07.ipynb
@@ -68,14 +68,16 @@
       "4.Shrimp tempura maki - ₹450\n",
       "5.Chicken Noodle Soup - ₹180\n",
       "6.Kimbap - ₹170\n",
-      "Order 96656 has been confirmed!\n",
+      "Order 84999 has been confirmed!\n",
+      "Thank you for your order\n",
       "1. New Order\n",
       "2. View Orders\n",
       "3. Quit\n",
-      "Order ID: 96656\n",
-      "Veg Thukpa x 3: ₹450\n",
-      "Chicken Noodle Soup x 1: ₹180\n",
-      "Total Cost: ₹630\n",
+      "Order ID: 84999\n",
+      "Shrimp tempura maki x 1: ₹450\n",
+      "Jajjangmyeon x 2: ₹500\n",
+      "Kimbap x 1: ₹170\n",
+      "Total Cost: ₹1120\n",
       "\n",
       "1. New Order\n",
       "2. View Orders\n",
@@ -130,6 +132,8 @@
     "    order = {\"Orderid\": uniqueOrderID, \"items\": Ordered_items}\n",
     "    orders.append(order)\n",
     "    print(f\"Order {uniqueOrderID} has been confirmed!\")\n",
+    "    print(\"Thank you for your order\")\n",
+    "    \n",
     "\n",
     "\n",
     "# Viewing the orders\n",
@@ -180,6 +184,13 @@
     "\n",
     "print(\"Thank you for choosing The Enchanted Fork!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
