--- a/lab08.ipynb
+++ b/lab08.ipynb
@@ -21,40 +21,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Enter values for Matrix 1:\n",
+      "Enter values for Matrix 2:\n",
+      "\n",
+      "Matrix 1:\n",
+      "4 6 7\n",
+      "3 8 9\n",
+      "0 2 4\n",
+      "\n",
+      "Matrix 2:\n",
+      "6 8 5\n",
+      "3 5 7\n",
+      "4 5 9\n",
       "\n",
       "Result Matrix:\n",
-      "37.0,49.0,61.0\n",
-      "27.0,36.0,45.0\n",
-      "17.0,23.0,29.0\n"
+      "70 97 125\n",
+      "78 109 152\n",
+      "22 30 50\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "def collect_matrix(matrix_name):\n",
+    "# Function to collect a matrix from the user\n",
+    "def collect_matrix(moi_matrix):\n",
     "    while True:\n",
     "        try:\n",
-    "            m = int(input(f\"Enter the number of rows for {matrix_name}: \"))  # Prompt user for the number of rows\n",
-    "            n = int(input(f\"Enter the number of columns for {matrix_name}: \"))  # Prompt user for the number of columns\n",
+    "            rows = int(input(f\"Enter the number of rows for {moi_matrix}: \"))\n",
+    "            cols = int(input(f\"Enter the number of columns for {moi_matrix}: \"))\n",
     "            break\n",
     "        except ValueError:\n",
-    "            print(\"Invalid input. Please enter a valid integer.\")\n",
+    "            print(\"Invalid input. Please enter a valid whole number.\")\n",
     "\n",
     "    matrix = []\n",
-    "    for _ in range(m):\n",
+    "    print(f\"Enter values for {moi_matrix}:\")\n",
+    "    for i in range(rows):\n",
     "        row = []\n",
-    "        for _ in range(n):\n",
+    "        for j in range(cols):\n",
     "            while True:\n",
     "                try:\n",
-    "                    value = float(input(f\"Enter a value for {matrix_name} ({_ + 1}, {_ + 1}): \"))  # Prompt user for matrix values\n",
+    "                    value = int(input(f\"Enter value at row {i + 1}, column {j + 1}: \"))\n",
     "                    break\n",
     "                except ValueError:\n",
     "                    print(\"Invalid input. Please enter a valid number.\")\n",
@@ -63,35 +75,46 @@
     "\n",
     "    return matrix\n",
     "\n",
+    "# Function to multiply two matrices\n",
     "def multiply_matrices(matrix1, matrix2):\n",
-    "    if len(matrix1[0]) != len(matrix2):\n",
+    "    rows1, cols1 = len(matrix1), len(matrix1[0])\n",
+    "    rows2, cols2 = len(matrix2), len(matrix2[0])\n",
+    "\n",
+    "    if cols1 != rows2:\n",
     "        return None  # Matrix multiplication is not possible.\n",
     "\n",
     "    result_matrix = []\n",
-    "    for i in range(len(matrix1)):\n",
+    "    for i in range(rows1):\n",
     "        row = []\n",
-    "        for j in range(len(matrix2[0])):\n",
-    "            sum_element = 0\n",
-    "            for k in range(len(matrix2)):\n",
-    "                sum_element += matrix1[i][k] * matrix2[k][j]  # Perform matrix multiplication\n",
-    "            row.append(sum_element)\n",
+    "        for j in range(cols2):\n",
+    "            element_sum = 0\n",
+    "            for k in range(cols1):\n",
+    "                element_sum += matrix1[i][k] * matrix2[k][j]\n",
+    "            row.append(element_sum)\n",
     "        result_matrix.append(row)\n",
     "\n",
     "    return result_matrix\n",
     "\n",
+    "# Function to display a matrix\n",
     "def display_matrix(matrix):\n",
     "    for row in matrix:\n",
-    "        print(','.join(map(str, row)))  # Display the matrix in a readable format\n",
+    "        print(' '.join(map(str, row)))\n",
     "\n",
+    "# Main function\n",
     "def main():\n",
     "    matrix1 = collect_matrix('Matrix 1')\n",
     "    matrix2 = collect_matrix('Matrix 2')\n",
+    "\n",
+    "    print(\"\\nMatrix 1:\")\n",
+    "    display_matrix(matrix1)\n",
+    "    print(\"\\nMatrix 2:\")\n",
+    "    display_matrix(matrix2)\n",
     "\n",
     "    result_matrix = multiply_matrices(matrix1, matrix2)\n",
     "\n",
     "    if result_matrix is not None:\n",
     "        print(\"\\nResult Matrix:\")\n",
-    "        display_matrix(result_matrix)  # Display the result matrix\n",
+    "        display_matrix(result_matrix)\n",
     "    else:\n",
     "        print(\"\\nMatrix multiplication is not possible.\")\n",
     "\n",
