--- a/Lab09/Lab09.ipynb
+++ b/Lab09/Lab09.ipynb
@@ -74,20 +74,23 @@
     }
    ],
    "source": [
+    "#create a class for te expense tracker\n",
     "class ExpenseTracker:\n",
-    "    def __init__(self):\n",
+    "    def __init__(self): \n",
     "        self.data = []\n",
     "\n",
     "    def add_transaction(self, expense_type, category, cost, description, date):\n",
     "        self.data.append({\"type\": expense_type, \"category\": category, \"cost\": cost, \"description\": description, \"date\": date})\n",
-    "\n",
+    "     \n",
+    "    #calculating the total expense (use float instead of int)\n",
     "    def total_expense(self):\n",
     "        total = 0\n",
     "        for transaction in self.data:\n",
     "            if transaction[\"type\"].lower() == \"expense\":\n",
     "                total += float(transaction[\"cost\"])\n",
     "        return total\n",
-    "\n",
+    "    \n",
+    "    #calculating the total income (use float instead of int)\n",
     "    def total_income(self):\n",
     "        total = 0\n",
     "        for transaction in self.data:\n",
@@ -95,6 +98,7 @@
     "                total += float(transaction[\"cost\"])\n",
     "        return total\n",
     "\n",
+    "#a function to save it to csv file\n",
     "def save_to_csv(data, filename):\n",
     "    with open(filename, 'w') as csvfile:\n",
     "        csvfile.write(\"type,category,cost,description,date\\n\")\n",
@@ -123,7 +127,8 @@
     "def main():\n",
     "    filename = \"pythonClass.csv\"\n",
     "    tracker = load_from_csv(filename)\n",
-    "\n",
+    "    \n",
+    "    #looping\n",
     "    while True:\n",
     "        print(\"\\nMenu:\")\n",
     "        print(\"1. Add Expense\")\n",
@@ -133,7 +138,8 @@
     "        print(\"5. Save and Exit\")\n",
     "\n",
     "        choice = input(\"Enter your choice: \")\n",
-    "\n",
+    "        \n",
+    "        #conditional statements\n",
     "        if choice == '1':\n",
     "            expense_type = \"expense\"\n",
     "            category = input(\"Enter the expense category: \")\n",
@@ -161,6 +167,7 @@
     "        else:\n",
     "            print(\"Invalid choice. Please try again.\")\n",
     "\n",
+    "#calling the function\n",
     "if __name__ == \"__main__\":\n",
     "    main()\n"
    ]
