--- a/Lab09/Lab09.ipynb
+++ b/Lab09/Lab09.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,6 @@
       "3. View Total Expense\n",
       "4. View Total Income\n",
       "5. Save and Exit\n",
-      "Total Expense: 953.0\n",
       "\n",
       "Menu:\n",
       "1. Add Expense\n",
@@ -61,7 +60,127 @@
       "3. View Total Expense\n",
       "4. View Total Income\n",
       "5. Save and Exit\n",
-      "Total Income: 7000.0\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "Total Expense: 7573.0\n",
+      "\n",
+      "Menu:\n",
+      "1. Add Expense\n",
+      "2. Add Income\n",
+      "3. View Total Expense\n",
+      "4. View Total Income\n",
+      "5. Save and Exit\n",
+      "Total Income: 24500.0\n",
       "\n",
       "Menu:\n",
       "1. Add Expense\n",
