--- a/Lab09/Lab09.ipynb
+++ b/Lab09/Lab09.ipynb
@@ -199,7 +199,13 @@
     "        self.data = []\n",
     "\n",
     "    def add_transaction(self, expense_type, category, cost, description, date):\n",
-    "        self.data.append({\"type\": expense_type, \"category\": category, \"cost\": cost, \"description\": description, \"date\": date})\n",
+    "        self.data.append({\n",
+    "            \"type\": expense_type, \n",
+    "            \"category\": category, \n",
+    "            \"cost\": cost, \n",
+    "            \"description\": description, \n",
+    "            \"date\": date\n",
+    "            })\n",
     "     \n",
     "    #calculating the total expense (use float instead of int)\n",
     "    def total_expense(self):\n",
@@ -219,7 +225,7 @@
     "\n",
     "#a function to save it to csv file\n",
     "def save_to_csv(data, filename):\n",
-    "    with open(filename, 'w') as csvfile:\n",
+    "    with open(filename, 'w+') as csvfile:\n",
     "        csvfile.write(\"type,category,cost,description,date\\n\")\n",
     "        for transaction in data:\n",
     "            row = \",\".join([transaction[\"type\"], transaction[\"category\"], str(transaction[\"cost\"]), transaction[\"description\"], transaction[\"date\"]])\n",
@@ -228,7 +234,7 @@
     "def load_from_csv(filename):\n",
     "    tracker = ExpenseTracker()\n",
     "    try:\n",
-    "        with open(filename, 'r') as csvfile:\n",
+    "        with open(filename, 'r+') as csvfile:\n",
     "            next(csvfile)  # Skip the header row\n",
     "            for line in csvfile:\n",
     "                parts = line.strip().split(\",\")\n",
